; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_haiku.c_uv_resident_set_memory.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_haiku.c_uv_resident_set_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64 }
%struct.TYPE_5__ = type { i32 }

@B_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_resident_set_memory(i64* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64*, align 8
  %4 = alloca %struct.TYPE_6__, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_5__, align 4
  store i64* %0, i64** %3, align 8
  %8 = call i32 @find_thread(i32* null)
  %9 = call i64 @get_thread_info(i32 %8, %struct.TYPE_5__* %7)
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @B_OK, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @UV__ERR(i64 %14)
  store i32 %15, i32* %2, align 4
  br label %31

16:                                               ; preds = %1
  store i64 0, i64* %5, align 8
  %17 = load i64*, i64** %3, align 8
  store i64 0, i64* %17, align 8
  br label %18

18:                                               ; preds = %24, %16
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i64 @get_next_area_info(i32 %20, i64* %5, %struct.TYPE_6__* %4)
  %22 = load i64, i64* @B_OK, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %30

24:                                               ; preds = %18
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64*, i64** %3, align 8
  %28 = load i64, i64* %27, align 8
  %29 = add i64 %28, %26
  store i64 %29, i64* %27, align 8
  br label %18

30:                                               ; preds = %18
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %13
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i64 @get_thread_info(i32, %struct.TYPE_5__*) #1

declare dso_local i32 @find_thread(i32*) #1

declare dso_local i32 @UV__ERR(i64) #1

declare dso_local i64 @get_next_area_info(i32, i64*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
